--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TableFlow"
         tools:targetApi="31">
         <activity
+            android:name=".HistoryScreen"
+            android:exported="false" />
+        <activity
+            android:name=".NotificationScreen"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileScreen"
             android:exported="false" />
         <activity
