--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.TableFlow"
         tools:targetApi="31">
         <activity
+            android:name=".AboutScreen"
+            android:exported="false" />
+        <activity
+            android:name=".AboutPage"
+            android:exported="false" />
+        <activity
+            android:name=".DevelopersScreen"
+            android:exported="false" />
+        <activity
+            android:name=".SettingScreen"
+            android:exported="false" />
+        <activity
             android:name=".ProfilePictureSelectionScreen"
             android:exported="false" />
         <activity
