--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TableFlow"
         tools:targetApi="31">
         <activity
+            android:name=".PreOrderScreen"
+            android:exported="false" />
+        <activity
+            android:name=".EditReservation"
+            android:exported="false" />
+        <activity
             android:name=".AboutScreen"
             android:exported="false" />
         <activity
